--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Catálogo de Productos</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Catálogo de Productos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Catálogo de Productos</h1>
-  <div id="catalogo" class="productos"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Panel lateral de filtros -->
+            <aside class="col-md-3 p-3 bg-light">
+                <h5>Filtros</h5>
+                <!-- Categoría -->
+                <div class="mb-3">
+                    <label class="form-label">Categoría</label>
+                    <select class="form-select" id="filtroCategoria">
+                        <option value="">Todas</option>
+                        <option value="Camisas">Camisas</option>
+                        <option value="Zapatos">Zapatos</option>
+                        <option value="Gorras">Gorras</option>
+                    </select>
+                </div>
+                <!-- Talla -->
+                <div class="mb-3">
+                    <label class="form-label">Talla</label>
+                    <select class="form-select" id="filtroTalla">
+                        <option value="">Todas</option>
+                        <option>XS</option>
+                        <option>S</option>
+                        <option>M</option>
+                        <option>L</option>
+                        <option>XL</option>
+                    </select>
+                </div>
+                <!-- Color -->
+                <div class="mb-3">
+                    <label class="form-label">Color</label>
+                    <input type="text" class="form-control" id="filtroColor" placeholder="Ej: Azul">
+                </div>
+                <!-- Precio -->
+                <div class="mb-3">
+                    <label class="form-label">Precio máximo ($)</label>
+                    <input type="range" class="form-range" id="filtroPrecio" min="0" max="100" step="1" value="100">
+                    <span id="precioMaxLabel">$100</span>
+                </div>
+            </aside>
 
-  <script src="script.js"></script>
+            <!-- Catálogo -->
+            <main class="col-md-9 p-4">
+                <h2>Productos</h2>
+                <div id="catalogo" class="row g-4"></div>
+            </main>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
